--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<h1>{{title}}</h1>
+<!-- <h1>{{title}}</h1>
 <hr>
 
 <app-counter></app-counter>
 <app-heroes-heros></app-heroes-heros>
 <app-heroes-list></app-heroes-list>
+ -->
 
+ <app-dbz-main-page></app-dbz-main-page>
