--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,12 +3,13 @@
 
 <div class="row">
   <div class="col">
-    <dbz-list [characterlist]="character" ></dbz-list>
+    <dbz-list [characterlist]="character"
+              (onDelete)="ondeleteCharacter($event)"></dbz-list>
   </div>
 
   <div class="col">
 
 
-   <dbz-add-character></dbz-add-character>
+   <dbz-add-character (onNewCharacter)="onnewcharacter($event)" ></dbz-add-character>
   </div>
 </div>
