--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,12 +1,19 @@
+
+<div class="row">
+
 <h4>Agregar Personajes</h4>
 
-<form>
+<form  (ngSubmit)="emitcharacter()">
 
-  <input type="text"   class="form-control mb-2" placeholder="Nombre">
-  <input type="number" class="form-control mb-2" placeholder="Poder">
+  <input type="text" [(ngModel)]="Character.name" name="Nombre" class="form-control mb-2" placeholder="Nombre">
 
- <button type="submit" class="btn btn-primary">
-  Agregar
- </button>
+  <input type="number" [(ngModel)]="Character.power" name="power" class="form-control mb-2" placeholder="Poder">
+
+  <button type="submit" class="btn btn-primary">
+    Agregar
+  </button>
+
+  <!-- <pre>{{Character | json }}</pre> -->
 </form>
 
+</div>
