--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -29,7 +29,7 @@
     <!-- <span>Es el pirmero: {{ isfirst }} </span>
     <span>Es el ultimos: {{thelast}} </span> -->
 
-    <button (click)="ondeleteCharacter(i)" class="btn btn-danger">X</button>
+    <button (click)="ondeleteCharacter(character.id )" class="btn btn-danger">X</button>
   </li>
 
 </ul>
