--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,13 +3,13 @@
 
 <div class="row">
   <div class="col">
-    <dbz-list [characterlist]="dbzService.character"
-     (onDelete)="dbzService.DeleteCharaacterbyId($event)"></dbz-list>
+    <dbz-list [characterlist]="characters"
+     (onDelete)="ondeleteCharacter($event)"></dbz-list>
   </div>
 
   <div class="col">
 
 
-   <dbz-add-character (onNewCharacter)="dbzService.onnewcharacter($event)"></dbz-add-character>
+   <dbz-add-character (onNewCharacter)="onNewCharacter($event)"></dbz-add-character>
   </div>
 </div>
